@@ -24,6 +24,8 @@ Changes in Version 2.1-0 (2017-07-25)
    o fixed an issue with robust.rma.mv() when the model was fitted with
      sparse=TRUE (thanks to Roger Martineau for noting the problem)
 
+   o rma.mv() does more intelligent filtering based on NAs in V matrix
+
 
 Changes in Version 2.0-0 (2017-06-22)
 =====================================
